Saving function for different models

--- a/Diamonds Machine Learning - RandomForest.ipynb
+++ b/Diamonds Machine Learning - RandomForest.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.metrics import *\n",
     "from sklearn.model_selection import train_test_split"
@@ -1792,11 +1792,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
     "diamonds_new.to_csv('diamonds_pred9', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing different estimators and depth for RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = ['carat', 'depth', 'table', 'cut_Fair',\n",
+    "       'cut_Good', 'cut_Ideal', 'cut_Premium', 'cut_Very Good', 'color_D',\n",
+    "       'color_E', 'color_F', 'color_G', 'color_H', 'color_I', 'color_J',\n",
+    "       'clarity_I1', 'clarity_IF', 'clarity_SI1', 'clarity_SI2', 'clarity_VS1',\n",
+    "       'clarity_VS2', 'clarity_VVS1', 'clarity_VVS2']\n",
+    "\n",
+    "X = diamonds_num[predictors]\n",
+    "y = diamonds_num['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithms = { \"rf_re1\": RandomForestRegressor(n_estimators=100, max_depth=21, min_samples_leaf=2).fit(X, y),\n",
+    "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y),\n",
+    "              añsdjf: GradientBoostingRegressor\n",
+    "              \n",
+    "    \n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('RMSE', np.sqrt(mean_squared_error(y_test, rf_reg.predict(X_test))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diamonds_test = pd.read_csv('input/diamonds-datamad0120/diamonds_test.csv')\n",
+    "X_test = diamonds_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = pd.get_dummies(X_test)\n",
+    "X_test = X_test.drop(columns=['id', 'x', 'y', 'z'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = rf_reg.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diamonds_new = pd.DataFrame()\n",
+    "diamonds_new['id'] = diamonds_test['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diamonds_new['price'] = pd.Series(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diamonds_new.to_csv('nombre', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithms = { \"rf_re1\": RandomForestRegressor(n_estimators=100, max_depth=21, min_samples_leaf=2).fit(X, y),\n",
+    "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def algoModel(algorithms, X, y):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    \n",
+    "    for k,v in algorithms:\n",
+    "        score = v.score(X_test,y_test)\n",
+    "        rmse = np.sqrt(mean_squared_error(y_test, rf_reg.predict(X_test)))\n",
+    "        y_pred = k.predict(X_test)\n",
+    "        \n",
+    "        print(k)\n",
+    "        print('Score is ', score)\n",
+    "        print('RMSE is ', rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
