--- a/Diamonds Machine Learning - RandomForest.ipynb
+++ b/Diamonds Machine Learning - RandomForest.ipynb
@@ -1830,8 +1830,8 @@
    "source": [
     "algorithms = { \"rf_re1\": RandomForestRegressor(n_estimators=100, max_depth=21, min_samples_leaf=2).fit(X, y),\n",
     "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y),\n",
-    "              añsdjf: GradientBoostingRegressor\n",
-    "              \n",
+    "              \"gb1\": GradientBoostingRegressor(n_estimators= 500, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
+    "              \"gb2\": GradientBoostingRegressor(n_estimators= 1000, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
     "    \n",
     "    \n",
     "}"
@@ -1842,73 +1842,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('RMSE', np.sqrt(mean_squared_error(y_test, rf_reg.predict(X_test))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diamonds_test = pd.read_csv('input/diamonds-datamad0120/diamonds_test.csv')\n",
-    "X_test = diamonds_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test = pd.get_dummies(X_test)\n",
-    "X_test = X_test.drop(columns=['id', 'x', 'y', 'z'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = rf_reg.predict(X_test)\n",
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diamonds_new = pd.DataFrame()\n",
-    "diamonds_new['id'] = diamonds_test['id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diamonds_new['price'] = pd.Series(y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diamonds_new.to_csv('nombre', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -1917,35 +1850,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 401,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algorithms = { \"rf_re1\": RandomForestRegressor(n_estimators=100, max_depth=21, min_samples_leaf=2).fit(X, y),\n",
-    "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 405,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def algoModel(algorithms, X, y):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "    \n",
-    "    for k,v in algorithms:\n",
-    "        score = v.score(X_test,y_test)\n",
-    "        rmse = np.sqrt(mean_squared_error(y_test, rf_reg.predict(X_test)))\n",
-    "        y_pred = k.predict(X_test)\n",
-    "        \n",
-    "        print(k)\n",
-    "        print('Score is ', score)\n",
-    "        print('RMSE is ', rmse)"
-   ]
   },
   {
    "cell_type": "code",
