Adding graphs to the function

--- a/Diamonds Machine Learning - RandomForest.ipynb
+++ b/Diamonds Machine Learning - RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,11 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.metrics import *\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from models_fit_rmse import algoModel"
    ]
   },
   {
@@ -1830,19 +1832,13 @@
    "source": [
     "algorithms = { \"rf_re1\": RandomForestRegressor(n_estimators=100, max_depth=21, min_samples_leaf=2).fit(X, y),\n",
     "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y),\n",
-    "              \"gb1\": GradientBoostingRegressor(n_estimators= 500, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
-    "              \"gb2\": GradientBoostingRegressor(n_estimators= 1000, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
+    "              \"gb1\": GradientBoostingRegressor(n_estimators= 2500, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
+    "              \"gb2\": GradientBoostingRegressor(n_estimators= 2000, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
+    "              \n",
     "    \n",
     "    \n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
