--- a/Diamonds Machine Learning - GradientBoostingRegressor.ipynb
+++ b/Diamonds Machine Learning - GradientBoostingRegressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.metrics import *\n",
     "from sklearn.model_selection import train_test_split\n"
@@ -19,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +223,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,16 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpr = GaussianProcessRegressor()"
+    "regr = AdaBoostRegressor(n_estimators=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,47 +287,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostRegressor(base_estimator=None, learning_rate=1.0, loss='linear',\n",
+       "                  n_estimators=20, random_state=None)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gpr.fit(X_train, y_train)"
+    "regr.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9932498822343131\n",
-      "0.9796895309620739\n"
+      "0.8901412130200665\n",
+      "0.8885160746184361\n"
      ]
     }
    ],
    "source": [
-    "print(gpr.score(X_train, y_train))\n",
-    "print(gpr.score(X_test, y_test))"
+    "print(regr.score(X_train, y_train))\n",
+    "print(regr.score(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE 564.1251822492201\n"
+      "RMSE 1476.0418485046805\n"
      ]
     }
    ],
    "source": [
-    "print('RMSE', np.sqrt(mean_squared_error(y_test, gpr.predict(X_test))))"
+    "print('RMSE', np.sqrt(mean_squared_error(y_test, regr.predict(X_test))))"
    ]
   },
   {
@@ -348,7 +359,7 @@
     }
    ],
    "source": [
-    "y_pred = gpr.predict(X_test)\n",
+    "y_pred = regr.predict(X_test)\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape, y_pred.shape"
    ]
   },
@@ -412,7 +423,7 @@
     }
    ],
    "source": [
-    "gb1.fit(X,y)"
+    "regr.fit(X,y)"
    ]
   },
   {
@@ -453,7 +464,7 @@
     }
    ],
    "source": [
-    "y_pred = gpr.predict(X_test)\n",
+    "y_pred = regr.predict(X_test)\n",
     "y_pred"
    ]
   },
