--- a/Diamonds Machine Learning - RandomForest.ipynb
+++ b/Diamonds Machine Learning - RandomForest.ipynb
@@ -1834,7 +1834,7 @@
     "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y),\n",
     "              \"gb1\": GradientBoostingRegressor(n_estimators= 2500, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
     "              \"gb2\": GradientBoostingRegressor(n_estimators= 2000, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
-    "              \n",
+    "              \"regr\": AdaBoostRegressor(n_estimators=10),\n",
     "    \n",
     "    \n",
     "}"
