Several models tested

--- a/Diamonds Machine Learning - RandomForest.ipynb
+++ b/Diamonds Machine Learning - RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor, BaggingRegressor\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.metrics import *\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +147,7 @@
        "4   4   0.65    Ideal     J     SI1   61.4   55.0  5.58  5.62  3.44   1276"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +187,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +220,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +242,7 @@
        "0"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +520,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +748,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,9 +1833,8 @@
     "              \"rf_re2\": RandomForestRegressor(n_estimators=85, max_depth=21, min_samples_leaf=3).fit(X, y),\n",
     "              \"gb1\": GradientBoostingRegressor(n_estimators= 2500, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
     "              \"gb2\": GradientBoostingRegressor(n_estimators= 2000, max_depth= 4, min_samples_split= 2).fit(X, y),\n",
-    "              \"regr\": AdaBoostRegressor(n_estimators=10),\n",
-    "    \n",
-    "    \n",
+    "              #\"regr\": AdaBoostRegressor(n_estimators=10),\n",
+    "              #\"regr\": BaggingRegressor(base_estimator=SVR(), n_estimators=10, random_state=0)\n",
     "}"
    ]
   },
